--- a/Level1Part1/index.html
+++ b/Level1Part1/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <head>
+    <html lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
@@ -10,7 +11,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Pacifico&display=swap"
         rel="stylesheet">
 </head>
-<hr>
 <body>
     <div class="wrapper">
               <div class="sidebar">
@@ -19,10 +19,12 @@
             </div>
             <div class="contacts-container">
             <h3 class="sidebar-title pacifico-regular">Contacts</h3>
+            <ul>
                     <li class="contacts-item">
                     Phone number:<a class="contacts-link" href="tel:+380976454342">+380976454342</a> </li>
                     <li class="contacts-item">
                     Email:<a class="contacts-link" href="mailto:poriniya@gmail.com">poriniya@gmail.com</a>  </li>
+                    </ul>
                 </div>
             <div class="skills-container">
                 <h3 class="sidebar-title pacifico-regular">Tech Skills</h3>
