--- a/Level1Part1/index.html
+++ b/Level1Part1/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
     <html lang="en">
 <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
@@ -19,7 +18,7 @@
             </div>
             <div class="contacts-container">
             <h3 class="sidebar-title pacifico-regular">Contacts</h3>
-            <ul>
+            <ul class="skills-list">
                     <li class="contacts-item">
                     Phone number:<a class="contacts-link" href="tel:+380976454342">+380976454342</a> </li>
                     <li class="contacts-item">
@@ -46,7 +45,7 @@
             </div>
             <div>
                 <h3 class="sidebar-title pacifico-regular" > Languages </h3>
-            <ul>
+            <ul class="skills-list">
                 <li>Ukrainian (Fluent)</li>
                 <li>English (Pre-Intermediate)</li>
             </ul>
