add my portfolio di-gi

--- a/index.html
+++ b/index.html
@@ -1,138 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Resume</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Pacifico&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <div class="container">
-      <div class="sidebar">
-        <div class="profile-container">
-          <img src="./image/image.jpg" alt="My Photo" class="profile-photo" />
-        </div>
-        <div class="contacts-container">
-          <h3 class="sidebar-title pacifico-regular">Contacts</h3>
-          <ul class="skills-list">
-            <li class="contacts-item">
-              Phone number:<a class="contacts-link" href="tel:+380976454342"
-                >+380976454342</a
-              >
-            </li>
-            <li class="contacts-item">
-              Email:<a class="contacts-link" href="mailto:poriniya@gmail.com"
-                >poriniya@gmail.com</a
-              >
-            </li>
-          </ul>
-        </div>
-        <div class="skills-container">
-          <h3 class="sidebar-title pacifico-regular">Tech Skills</h3>
-          <ul class="skills-list">
-            <li class="skills-item">HTML, CSS</li>
-            <li class="skills-item">Computer science basics (Stanford)</li>
-          </ul>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Resume</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
 
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Pacifico&display=swap"
+    rel="stylesheet" />
+</head>
+
+<body>
+  <div class="container">
+    <div class="sidebar">
+      <div class="profile-container">
+        <img src="./image/image.jpg" alt="My Photo" class="profile-photo" />
+      </div>
+      <div class="contacts-container">
+        <h3 class="sidebar-title pacifico-regular">Contacts</h3>
+        <ul class="skills-list">
+          <li class="contacts-item">
+            Phone number:<a class="contacts-link" href="tel:+380976454342">+380976454342</a>
+          </li>
+          <li class="contacts-item">
+            Email:<a class="contacts-link" href="mailto:poriniya@gmail.com">poriniya@gmail.com</a>
+          </li>
+        </ul>
+      </div>
+      <div class="skills-container">
+        <h3 class="sidebar-title pacifico-regular">Tech Skills</h3>
+        <ul class="skills-list">
+          <li class="skills-item">HTML, CSS</li>
+          <li class="skills-item">Computer science basics (Stanford)</li>
+        </ul>
+      </div>
+
+      <div>
+        <h3 class="sidebar-title pacifico-regular">Soft Skills</h3>
+        <ul class="skills-list">
+          <li class="skills-item">Problem-solving</li>
+          <li class="skills-item">Responsibility</li>
+          <li class="skills-item">Time Management</li>
+          <li class="skills-item">Critical thinking</li>
+          <li class="skills-item">Effective Communication</li>
+        </ul>
+      </div>
+      <div>
+        <h3 class="sidebar-title pacifico-regular">Languages</h3>
+        <ul class="skills-list">
+          <li>Ukrainian (Fluent)</li>
+          <li>English (Pre-Intermediate)</li>
+        </ul>
+      </div>
+      <div>
+        <h3 class="sidebar-title pacifico-regular"> Portfolio</h3>
+        <ul class="skills-list">
+          <a href="https://tetiana5buria.github.io/di-gi/" target="_blank" rel="noopener noreferrer">DI-GI</a>
+        </ul>
+
+
+      </div>
+    </div>
+    <div class="main-content">
+      <div>
+        <h2 class="pacifico-regular">
+          A good specialist. Targeted. Hardworking
+        </h2>
+        <h1>Tatiana Buria</h1>
+        <p>
+          Reliable and results-oriented team player with strong communication
+          and organizational skills. Responsible and adept at prioritizing
+          tasks to meet deadlines effectively. Dedicated to continuous
+          learning and self-improvement to achieve outstanding results. A
+          supporter of a healthy lifestyle, ready to contribute positively and
+          bring value to the team.
+        </p>
+      </div>
+      <div>
+        <h3 class="main-content-title abril-fatface-regular">
+          Work Experience
+        </h3>
         <div>
-          <h3 class="sidebar-title pacifico-regular">Soft Skills</h3>
-          <ul class="skills-list">
-            <li class="skills-item">Problem-solving</li>
-            <li class="skills-item">Responsibility</li>
-            <li class="skills-item">Time Management</li>
-            <li class="skills-item">Critical thinking</li>
-            <li class="skills-item">Effective Communication</li>
+          <h4>PJS “Liky Kirovohradshchyny”</h4>
+          <p>Apr 2018 – Apr 2022</p>
+          <ul>
+            <li>Carried out cash transactions.</li>
+            <li>
+              Worked with the "Affordable Medicines" program for registration
+              of prescriptions and reporting.
+            </li>
+            <li>Submitted reports on reimbursement.</li>
+            <li>Maintained records of goods and inventory.</li>
+            <li>Conducted accounting of cash registers.</li>
+            <li>
+              Monitored the maintenance of cash register books in regional
+              pharmacies.
+            </li>
           </ul>
         </div>
         <div>
-          <h3 class="sidebar-title pacifico-regular">Languages</h3>
-          <ul class="skills-list">
-            <li>Ukrainian (Fluent)</li>
-            <li>English (Pre-Intermediate)</li>
+          <h4>Dolynska District State Administration</h4>
+          <p>Aug 2017 – Mar 2018</p>
+          <ul>
+            <li>
+              Analyzed the economic situation in the district and developed
+              strategies for economic development.
+            </li>
+            <li>Prepared proposals for investment project implementation.</li>
+            <li>Monitored economic and infrastructure indicators.</li>
+            <li>
+              Coordinated with enterprises and industry organizations to
+              promote district development.
+            </li>
           </ul>
         </div>
       </div>
-      <div class="main-content">
-        <div>
-          <h2 class="pacifico-regular">
-            A good specialist. Targeted. Hardworking
-          </h2>
-          <h1>Tatiana Buria</h1>
-          <p>
-            Reliable and results-oriented team player with strong communication
-            and organizational skills. Responsible and adept at prioritizing
-            tasks to meet deadlines effectively. Dedicated to continuous
-            learning and self-improvement to achieve outstanding results. A
-            supporter of a healthy lifestyle, ready to contribute positively and
-            bring value to the team.
-          </p>
-        </div>
-        <div>
-          <h3 class="main-content-title abril-fatface-regular">
-            Work Experience
-          </h3>
-          <div>
-            <h4>PJS “Liky Kirovohradshchyny”</h4>
-            <p>Apr 2018 – Apr 2022</p>
-            <ul>
-              <li>Carried out cash transactions.</li>
-              <li>
-                Worked with the "Affordable Medicines" program for registration
-                of prescriptions and reporting.
-              </li>
-              <li>Submitted reports on reimbursement.</li>
-              <li>Maintained records of goods and inventory.</li>
-              <li>Conducted accounting of cash registers.</li>
-              <li>
-                Monitored the maintenance of cash register books in regional
-                pharmacies.
-              </li>
-            </ul>
-          </div>
-          <div>
-            <h4>Dolynska District State Administration</h4>
-            <p>Aug 2017 – Mar 2018</p>
-            <ul>
-              <li>
-                Analyzed the economic situation in the district and developed
-                strategies for economic development.
-              </li>
-              <li>Prepared proposals for investment project implementation.</li>
-              <li>Monitored economic and infrastructure indicators.</li>
-              <li>
-                Coordinated with enterprises and industry organizations to
-                promote district development.
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div>
-          <h3 class="main-content-title abril-fatface-regular">Education</h3>
+      <div>
+        <h3 class="main-content-title abril-fatface-regular">Education</h3>
 
-          <div>
-            <h4>
-              Kyiv Academy of International Economy and International Relations
-            </h4>
-            <h5 class="content-title">Economist</h5>
-            <p>September 2012 - July 2015 | Ukraine</p>
-          </div>
-          <div>
-            <h4>School of Programming "Shpp"</h4>
-            <h5 class="content-title">Computer Science Basics</h5>
-            <p>June 2024 - November 2024</p>
-            <h5 class="content-title">Frontend Developer</h5>
-            <p>In this moment</p>
-          </div>
+        <div>
+          <h4>
+            Kyiv Academy of International Economy and International Relations
+          </h4>
+          <h5 class="content-title">Economist</h5>
+          <p>September 2012 - July 2015 | Ukraine</p>
+        </div>
+        <div>
+          <h4>School of Programming "Shpp"</h4>
+          <h5 class="content-title">Computer Science Basics</h5>
+          <p>June 2024 - November 2024</p>
+          <h5 class="content-title">Frontend Developer</h5>
+          <p>In this moment</p>
         </div>
       </div>
     </div>
-    <hr />
-  </body>
+  </div>
+  <hr />
+</body>
+
 </html>
